# drf-api-permissions-postgres

./: docker-compose.yml  pyproject.toml  readme.md
phons/: views.py
shop/: settings.py  urls.py
